haddop remove, calcite merge